force-app/main/default/objects/RD_CDCDiscSubmittals__c/RD_CDCDiscSubmittals__c.object-meta.xml
<CustomObject>
    <label>RD CDCDiscSubmittals</label>
    <nameField>
        <label>RD CDCDiscSubmittals</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD CDCDiscSubmittals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>