force-app/main/default/objects/RD_CDCDiscSubmittals__c/fields/BDILeadwire__c.field-meta.xml
<CustomField>
    <fullName>BDILeadwire__c</fullName>
    <label>BDILeadwire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>