force-app/main/default/objects/RD_CDCDiscSubmittals__c/fields/DimB__c.field-meta.xml
<CustomField>
    <fullName>DimB__c</fullName>
    <label>DimB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>