force-app/main/default/objects/RD_CDCDiscSubmittals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <columns>STC__c</columns>
    <columns>HCLASS__c</columns>
    <columns>BDILeadwire__c</columns>
    <columns>DrawingID__c</columns>
    <columns>DimA__c</columns>
    <columns>DimB__c</columns>
    <columns>DimC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>